@@ -1,9 +1,12 @@
 package rs.raf.cloud.raf_cloud_backend.service;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import rs.raf.cloud.raf_cloud_backend.dto.MachineDto;
 import rs.raf.cloud.raf_cloud_backend.dto.MachineEventDto;
+import rs.raf.cloud.raf_cloud_backend.dto.MachineSearchDto;
 import rs.raf.cloud.raf_cloud_backend.model.*;
 import rs.raf.cloud.raf_cloud_backend.repository.MachineEventRepository;
 import rs.raf.cloud.raf_cloud_backend.repository.MachineRepository;
@@ -11,9 +14,18 @@ import rs.raf.cloud.raf_cloud_backend.repository.UserRepository;
 import rs.raf.cloud.raf_cloud_backend.security.CurrentUser;
 import rs.raf.cloud.raf_cloud_backend.security.CurrentUserProvider;
 
+import java.time.Duration;
+import java.time.Instant;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Random;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
+
+import static java.lang.Thread.sleep;
 
 @Service
 @RequiredArgsConstructor
@@ -23,6 +35,10 @@ public class MachineService {
     private final MachineEventRepository eventRepository;
     private final CurrentUserProvider currentUserProvider;
     private final UserRepository userRepository;
+
+    private final ExecutorService executorService = Executors.newCachedThreadPool();
+    private final ScheduledExecutorService scheduledExecutorService = Executors.newSingleThreadScheduledExecutor();
+    private final Random random = new Random();
 
     public MachineDto create(String name) {
         CurrentUser cu = currentUserProvider.get();
@@ -45,27 +61,52 @@ public class MachineService {
     public void start(Long id) {
         Machine m = getMachine(id);
 
-        if (m.getStatus() == MachineStatus.RUNNING) {
-            error(m, "Machine already running");
-            return;
+        if (m.getStatus() != MachineStatus.STOPPED) {
+            throw new RuntimeException("Machine must be STOPPED");
         }
 
-        m.setStatus(MachineStatus.RUNNING);
+        m.setStatus(MachineStatus.IN_PROGRESS);
         machineRepository.save(m);
-        log(m, "START", "Machine started");
+
+        executorService.submit(() -> {
+            try {
+                sleep(10_000 + random.nextInt(6_000));
+
+                m.setStatus(MachineStatus.RUNNING);
+                machineRepository.save(m);
+
+                log(m, "START_DONE", "Machine started");
+            } catch (Exception e) {
+                m.setStatus(MachineStatus.ERROR);
+                machineRepository.save(m);
+                log(m, "ERROR", e.getMessage());
+            }
+        });
     }
+
 
     public void stop(Long id) {
         Machine m = getMachine(id);
 
-        if (m.getStatus() == MachineStatus.STOPPED) {
-            error(m, "Machine already stopped");
-            return;
+        if (m.getStatus() != MachineStatus.RUNNING) {
+            throw new RuntimeException("Machine must be RUNNING");
         }
 
-        m.setStatus(MachineStatus.STOPPED);
+        m.setStatus(MachineStatus.IN_PROGRESS);
         machineRepository.save(m);
-        log(m, "STOP", "Machine stopped");
+
+        executorService.submit(() -> {
+            try {
+                sleep(10_000 + random.nextInt(6_000));
+                m.setStatus(MachineStatus.STOPPED);
+                machineRepository.save(m);
+                log(m, "STOP_DONE", "Machine stopped");
+            } catch (Exception e) {
+                m.setStatus(MachineStatus.ERROR);
+                machineRepository.save(m);
+                log(m, "ERROR", e.getMessage());
+            }
+        });
     }
 
     public void restart(Long id) {
@@ -76,10 +117,50 @@ public class MachineService {
             return;
         }
 
-        log(m, "RESTART", "Machine restarting");
-        m.setStatus(MachineStatus.RUNNING);
+        // opcionalno: zabrani ako je vec u toku neka operacija
+        if (m.getStatus() == MachineStatus.IN_PROGRESS) {
+            error(m, "Machine busy");
+            return;
+        }
+
+        m.setStatus(MachineStatus.IN_PROGRESS);
         machineRepository.save(m);
+
+        executorService.submit(() -> {
+            try {
+                sleep(2_000 + random.nextInt(6_000));
+
+                Machine m1 = getMachine(id);
+                m1.setStatus(MachineStatus.STOPPED);
+                machineRepository.save(m1);
+
+                sleep(2_000 + random.nextInt(6_000));
+
+                Machine m2 = getMachine(id);
+                m2.setStatus(MachineStatus.IN_PROGRESS);
+                machineRepository.save(m2);
+
+                sleep(2_000 + random.nextInt(6_000));
+
+                Machine m3 = getMachine(id);
+                m3.setStatus(MachineStatus.RUNNING);
+                machineRepository.save(m3);
+
+                log(m3, "RESTART_DONE", "Machine restarted");
+            } catch (Exception e) {
+                Machine mx = null;
+                try {
+                    mx = getMachine(id);
+                    mx.setStatus(MachineStatus.ERROR);
+                    machineRepository.save(mx);
+                    log(mx, "ERROR", e.getMessage());
+                } catch (Exception ignored) {
+                    log(m, "ERROR", e.getMessage());
+                }
+            }
+        });
     }
+
 
     public void destroy(Long id) {
         Machine m = getMachine(id);
@@ -101,13 +182,59 @@ public class MachineService {
                 .collect(Collectors.toList());
     }
 
-    public List<MachineDto> searchByName(String q) {
-        String query = q == null ? "" : q.trim().toLowerCase();
-        return machineRepository.findAll()
+    public void scheduleOperation(Long id, MachineOperationType operationType, Instant when) {
+        long delayMs = Duration.between(Instant.now(), when).toMillis();
+
+        scheduledExecutorService.schedule(() -> {
+           try {
+               switch (operationType) {
+                   case POWER_ON -> start(id);
+                   case POWER_OFF -> stop(id);
+                   case RESTART -> restart(id);
+               }
+           } catch (Exception ex) {
+               Machine m = getMachine(id);
+               if (m != null) {
+                   log(m, "ERROR", "Scheduled " + operationType + " failed: " + ex.getMessage());
+               }
+           }
+        }, Math.max(delayMs, 0), TimeUnit.MILLISECONDS);
+    }
+
+    public List<MachineDto> search(MachineSearchDto dto) {
+        Specification<Machine> spec = Specification.where(null);
+
+        if (dto.getMachineName() != null && !dto.getMachineName().isBlank()) {
+            String q = dto.getMachineName().trim().toLowerCase();
+            spec = spec.and((root, query, cb) ->
+                    cb.like(cb.lower(root.get("name")), "%" + q + "%")
+            );
+        }
+
+        if (dto.getStates() != null && !dto.getStates().isEmpty()) {
+            spec = spec.and((root, query, cb) ->
+                    root.get("status").in(dto.getStates())
+            );
+        }
+
+        if (dto.getStartDate() != null) {
+            LocalDateTime start = dto.getStartDate().atStartOfDay();
+            spec = spec.and((root, query, cb) ->
+                    cb.greaterThanOrEqualTo(root.get("createdAt"), start)
+            );
+        }
+
+        if (dto.getEndDate() != null) {
+            LocalDateTime end = dto.getEndDate().plusDays(1).atStartOfDay();
+            spec = spec.and((root, query, cb) ->
+                    cb.lessThan(root.get("createdAt"), end)
+            );
+        }
+
+        return machineRepository.findAll(spec, Sort.by(Sort.Direction.DESC, "createdAt"))
                 .stream()
-                .filter(m -> m.getName() != null && m.getName().toLowerCase().contains(query))
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<MachineEventDto> history(Long machineId) {
